update readme to reflect new version number format

--- a/README
+++ b/README
@@ -2,9 +2,11 @@
 This script produces version numbers from a git repository
 It's easy to work into any build process, call the script, it produces a version number
 
-The format: [closest git tag].[git changeset].[auto increment build number]
+The format: [closest git tag].[closest git changeset].[auto increment build number]
 The portions of the build number that aren't needed are dropped. For example if the current tag and changeset are the same,
-The changeset portion and the build number portion won't be included. 
+The changeset portion and the build number portion won't be included. If you're working on a new changeset, obviously we won't
+know the SHA1 before you commit it, so in the meantime the version number will be in the format:
+[closest git tag].[last git changeset].dirty.[auto increment build number]
 
 The auto build number increments when there are dirty files in the repository
 It is a count of how many builds you've done since your last commit.
