--- a/README
+++ b/README
@@ -1,10 +1,10 @@
 
 This script produces version numbers from a git repository. It's easy to work into any build process, call the script from within a directory with a git repository, and it produces a version number.
 
-The format: [closest git tag].[closest git changeset].[auto increment build number]
+The format: [closest git tag].[last git changeset].dirty.[auto increment build number]
 
 The portions of the build number that aren't needed are dropped. For example if the current tag and changeset are the same, the changeset portion and the build number portion won't be included. 
-If you're working on a new changeset, obviously we won't know the SHA1 before you commit it, so in the meantime the version number will be in the format: [closest git tag].[last git changeset].dirty.[auto increment build number]
+If you're working on a new changeset, obviously we won't know the SHA1 before you commit it, so in th in the meantime you get the .dirty.[auto increment build number]
 
 The auto build number increments when there are dirty files in the repository it is a count of how many builds you've done since your last commit. Only the developer will see the build number. It resets every time you commit or switch commits.  The version number should be the same for every changeset, unless you remove tags at some point.
 
